# InkGrader

./: README.md  backend_logs.txt  fix_dals.py  fix_usages.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  config.py  grading_task.py  models.py  pyproject.toml  redis_stream.py  requirements.txt  routes.py
backend/Agent/: feedback_agent.py
backend/Agents/: __init__.py  extraction_agent.py  grading_agent.py  models.py  prompts.py  tools.py
backend/Auth/: models.py  routes.py  utils.py
backend/Database/: __init__.py  answers_dal.py  config.py  db_utils.py  exam_dal.py  knowledge_base_dal.py  models.py  questions_dal.py  student_dal.py  user_dal.py
backend/FileProcessor/: __init__.py  helpers.py  utils.py
backend/Grading/: __init__.py  grading_task.py  models.py
backend/OCRSpace/: routes.py
backend/tests/: conftest.py  test_database.py  test_file_processor.py  test_grading_agent.py
frontend/: .env.example  auth-schema.ts  drizzle.config.ts  package-lock.json  package.json  test_auth.ts  test_schema.js
frontend/app/: globals.css  layout.tsx  middleware.ts
frontend/app/(landing_page)/: layout.tsx  page.tsx
frontend/components/: login-form.tsx  signup-form.tsx
frontend/drizzle/: 0000_odd_anita_blake.sql
frontend/lib/: auth.ts  proxy-utils.ts
frontend/src/: App.jsx  brutalist.css  home.css  index.css
frontend_next_js/: package-lock.json  package.json  tsconfig.json
sample_data/: questions.txt  reference.txt  rubric.txt  student_1.txt  student_2.txt  student_3.txt  student_4.txt  student_5.txt
(+64 files in other folders)
